tests/ui/rfc-2632-const-trait-impl/issue-79450.stderr
error[E0015]: cannot call non-const fn `Arguments::<'_>::new_v1` in constant functions
  --> $DIR/issue-79450.rs:9:9
   |
LL |         println!("lul");
   |         ^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0015]: cannot call non-const fn `_print` in constant functions
  --> $DIR/issue-79450.rs:9:9
   |
LL |         println!("lul");
   |         ^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
